2005-05-09  Derek Price  <derek@ximbiot.com>

	* history.c (history_write): Add FIXME.

2005-05-09  Derek Price  <derek@ximbiot.com>

	* hash.c (removenode, mergelists): New function.
	(delnode): Use removenode.
	* hash.h (mergelists): New proto.

2005-05-04  Derek Price  <derek@ximbiot.com>

	* error.c (error): Avoid recursion and syslog the problem.

2005-05-03  Derek Price  <derek@ximbiot.com>

	* tag.c (is_in_val_tags): Remove unnecessary existance checking for the
	val-tags file and just rely on open() to create it when necessary.

2005-05-03  Derek Price  <derek@ximbiot.com>

	* tag.c (tag_check_valid): Don't verify the_val_args.found when it is
	not initialized.

2005-05-03  Derek Price  <derek@ximbiot.com>

	* add.c: Update comment to include the -k option.  This resolves issue
	#226 on cvshome.org.

2005-05-02  Derek Price  <derek@ximbiot.com>

	Remove unnecessary level of indirection.
	* lock.c (L_HISTORY_LOCK, L_VAL_TAGS_LOCK): Remove macros.
	(internal_lock, internal_clear_lock): Accept lock as argument.
	(history_lock, clear_history_lock, val_tags_lock, clear_val_tags_lock):
	Replace old macro arg with an actual lock pointer.

2005-05-02  Derek Price  <derek@ximbiot.com>

	* lock.c (internal_lock, internal_clear_lock): Add protos.
	(history_lock, val_tags_lock): Return the chartered true/false status.

2005-05-02  Derek Price  <derek@ximbiot.com>

	* cvs.h (CVSHISTLCK): Rename macro to...
	(CVSHISTORYLCK): ...this.
	(CVSVALTAGSLCK): New macro.
	(val_tags_lock, clear_val_tags_lock): New functions.
	* lock.c (global_val_tags_lock): New global.
	(Lock_Cleanup): Clean up after val-tags lock if necessary.
	(L_HISTORY_LOCK, L_VAL_TAGS_LOCK): New local macros.
	(internal_lock, val_tags_lock, clear_val_tags_lock): New functions.
	(history_lock): Use new internal function.
	* tag.c (is_in_val_tags, add_to_val_tags): New functions using the
	write lock for val-tags and factored from...
	(tag_check_valid): ...this function.