@@ -121,16 +121,8 @@ error (int status, int errnum, const char *message, ...)
     char *emptybuf = "";
 
     static const char *last_message = NULL;
-    static va_list last_args;
     static int last_status;
     static int last_errnum;
-
-    if (last_message) goto recursion_error;
-    last_message = message;
-    va_start (args, message);
-    last_args = args;
-    last_status = status;
-    last_errnum = errnum;
 
     /* Initialize these to avoid a lot of special case error handling.  */
     buf = statbuf;
@@ -139,7 +131,9 @@ error (int status, int errnum, const char *message, ...)
 
     /* Expand the message the user passed us.  */
     length = sizeof (statbuf);
+    va_start (args, message);
     buf = vasnprintf (statbuf, &length, message, args);
+    va_end (args);
     if (!buf) goto memerror;
 
     /* Expand the cvs commmand name to <cmd> or [<cmd> aborted].
@@ -168,14 +162,21 @@ error (int status, int errnum, const char *message, ...)
                       errnum ? ": " : "", errnum ? strerror (errnum) : "");
     if (!buf2) goto memerror;
 
-    /* Send the final message to the client or log it.  */
+    /* Send the final message to the client or log it.
+     *
+     * Set this recursion blocks first since this is the only function called
+     * here which can cause error() to be caled a second time.
+     */
+    if (last_message) goto recursion_error;
+    last_message = buf2;
+    last_status = status;
+    last_errnum = errnum;
     cvs_outerr (buf2, length);
 
     /* Reset our recursion lock.  This needs to be done before the call to
      * exit() to allow the exit handlers to make calls to error().
      */
     last_message = NULL;
-    va_end (args);
 
     /* Done, if we're exiting.  */
     if (status)
@@ -221,15 +222,13 @@ recursion_error:
     syslog (LOG_DAEMON | LOG_EMERG,
 	    "error (%d, %d) called recursively.  Original message was:",
 	    last_status, last_errnum);
-    vsyslog (LOG_DAEMON | LOG_EMERG, last_message, last_args);
+    syslog (LOG_DAEMON | LOG_EMERG, "%s", last_message);
 
 
     syslog (LOG_DAEMON | LOG_EMERG,
             "error (%d, %d) called recursively.  Second message was:",
 	    status, errnum);
-    va_start (args, message);
-    vsyslog (LOG_DAEMON | LOG_EMERG, message, args);
-    va_end (args);
+    vsyslog (LOG_DAEMON | LOG_EMERG, "%s", buf2);
 
     syslog (LOG_DAEMON | LOG_EMERG, "Aborting.");
 #endif /* HAVE_SYSLOG_H */
@@ -239,7 +238,6 @@ sidestep_done:
      * exit() to allow the exit handlers to make calls to error().
      */
     last_message = NULL;
-    va_end (last_args);
 
     exit (EXIT_FAILURE);
 }
